# ebike-dl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release-please.yml  release.yml
ebike_dl/: main.py
