[tool.poetry]
name = "ebike-dl"
version = "0.2.0"
description = "Bosch eBike Connect Activity Downloader"
authors = ["Brice Maron <bmaron@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/eMerzh/ebike-dl"

[tool.poetry.scripts]
rick-portal-gun = "rick_portal_gun.main:app"
ebike-dl = "ebike_dl.main:app"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.isort]
line_length=120
skip_gitignore=true
profile="black"
add_imports=["from __future__ import annotations"]


[tool.black]
line-length = 120
target-version = ['py310']
